--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/react": "~18.0.28",
     "@types/react-native": "~0.71.3",
     "typescript": "^4.9.5",
-    "xnft": "latest"
+    "xnft": "0.6.12-latest.5810"
   },
   "resolutions": {
     "react-error-overlay": "6.0.11"
