--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@types/react": "~18.0.28",
     "@types/react-native": "~0.71.3",
+    "buffer": "^6.0.3",
     "typescript": "^4.9.5",
     "xnft": "0.6.12-latest.5810"
   },
